static/css/layout.css
.container {
  width: 400px;
  height: 100dvh;
  margin: auto;
  display: flex;
  flex-direction: column;
}

main {
  height: 100dvh;
}

:root {
  /* spacing */
  --gutter: 2rem;
  --padding: 1.6rem;
  --padding-sm: 1rem;

  /* fontsize */
  --heading: 1.6rem;
  --body: 1.4rem;

  /* color */
  --blue:	#CEDFF1;
  --btn: #8BE0F1;
  --yellow: #FFFABB;
  --white: #fff;
  --gray: #c4c4c4;
  --icon: #32BEBE;
}

